Read README File fisrt. Basically finish ClientPage.py's API and API unit test.
